--- a/carservice.css
+++ b/carservice.css
@@ -392,6 +392,7 @@ form textarea {
   padding: 15px 10px;
   outline: none;
   color: #02133c;
+  font-size: 14px;
 }
 
 form .user-name input,
@@ -442,16 +443,11 @@ form button {
   width: 250px;
 }
 
-.footer-main .navigation {
-  text-align: center;
-}
-
 .footer-main h2 {
   font-size: 16px;
   color: #02133c;
   font-weight: 700;
   padding-bottom: 20px;
-  text-align: center;
 }
 
 .footer-main .main-about p {
